--- a/src/styles/task-details.css
+++ b/src/styles/task-details.css
@@ -33,7 +33,7 @@
 }
 
 /* Mobile view - slide from right */
-.is-mobile .task-details {
+.is-phone .task-details {
 	position: absolute;
 	right: 0;
 	top: 0;
@@ -44,19 +44,19 @@
 	transform: translateX(100%);
 }
 
-.is-mobile .task-genius-container.details-hidden .task-details {
+.is-phone .task-genius-container.details-hidden .task-details {
 	width: 100%;
 	margin-right: 0;
 	transform: translateX(100%);
 }
 
-.is-mobile .task-genius-container.details-visible .task-details {
+.is-phone .task-genius-container.details-visible .task-details {
 	width: calc(100% - var(--size-4-12));
 	transform: translateX(0);
 }
 
 /* Add overlay when details are visible on mobile */
-.is-mobile .task-genius-container.details-visible::before {
+.is-phone .task-genius-container.details-visible::before {
 	content: "";
 	position: absolute;
 	top: 0;
@@ -69,7 +69,7 @@
 	transition: opacity 0.3s ease-in-out;
 }
 
-.is-mobile .details-close-btn {
+.is-phone .details-close-btn {
 	width: 24px;
 	height: 24px;
 	display: flex;
@@ -77,7 +77,7 @@
 	justify-content: center;
 }
 
-.is-mobile .details-header {
+.is-phone .details-header {
 	padding: var(--size-4-4);
 }
 
@@ -351,6 +351,5 @@
 		width: 100%;
 		max-width: 100%;
 		border-left: none;
-		border-top: 1px solid var(--background-modifier-border);
 	}
 }
